Thu May 31 19:15:58 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Relax automake requirement to 1.9.2 to allow RPM
	  building on RHEL 4.

Thu May 31 18:44:55 BST 2007  Olly Betts <olly@survex.com>

	* INSTALL,NEWS,README,configure.ac,java/README: Change "MacOS X" to
	  "Mac OS X".

Thu May 31 17:59:25 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Use JAVA_CPPFLAGS so we find jni.h.

Thu May 31 14:52:07 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Automatically add an extra "-I" for the
	  linux/solaris/win32 subdirectory which Sun's JDK requires.
	* java/README: Remove note saying that the user may have to do this
	  manually.

Thu May 31 13:11:56 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Distribute the generated .java sources.

Thu May 31 12:34:25 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Document JAVA_HOME and JDK_HOME in ./configure --help
	  and mark their values as "precious" so they are preserved for when
	  configure is automatically rerun.

Wed May 30 23:54:23 BST 2007  Olly Betts <olly@survex.com>

	* python/smoketest.py: Update uses of the legacy sequence API.
	* python/pythontest.py: The legacy sequence API is only supported for
	  Python 2.3 and later, so don't run tests for it when running under
	  Python 2.2.

Wed May 30 22:27:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/pythontest.py,python/smoketest.py: Revert the earlier
	  change to the expected output from testcases which expect
	  exceptions, in line with the new Error.__str__() method.

Wed May 30 22:21:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/generate-python-exceptions.in: Override the new default
	  get_description() method in the Python bindings (which is renamed
	  to __str__) with a similar method which doesn't include the type
	  of the error message at the start of the error string.  Python